syntax="proto3";

package protos;
option go_package = "internal/protos";
import "internal/protos/unit.proto";
import "internal/protos/area.proto";
import "internal/protos/utils.proto";

message Event {
    EventType type = 1;
    oneof data {
        EventConnect connect = 2;
        EventMove move = 3;
        GameState state = 4;
        GameStatePatche state_patch = 5;
        EventCast cast = 6;
    }
    uint32 player_id = 7;
}

enum EventType {
   init = 0;
   connect = 1;
   exit = 2;
   stop = 3;
   move = 4;
   empty = 5;
   state = 6;
   state_patch = 7;
   cast = 8;
}

message EventConnect {
    Unit unit = 1;
}

message EventCast {
    uint32 ability_id = 1;
}

message EventMove {
    Direction direction = 2;
}

message GameState {
    map<uint32, Unit> units = 1;
    map<uint32, Area> areas = 2;
}

message GameStatePatche {
    map<uint32, PatchUnit> units = 1;
    map<uint32, Unit> created_units = 2;
    map<uint32, Empty> deleted_units_ids = 3;

    map<uint32, PatchArea> areas = 4;
    map<uint32, Area> created_areas = 5;
    map<uint32, Empty> deleted_areas = 6;
}